# VulkanTesting

VulkanTesting/: .gitignore  CMakeLists.txt  main.cpp
VulkanTesting/hello_triangle_app/: CMakeLists.txt  HelloTriangleApp.cpp  HelloTriangleApp.hpp
VulkanTesting/hello_triangle_app/resources/shaders/sources/: compile.bat  shader.vert
VulkanTesting/utils/: CMakeLists.txt  IO.hpp  log.hpp
